--- a/package.json
+++ b/package.json
@@ -4,14 +4,25 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node server.js",
+    "start": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
+    "bcrypt": "^3.0.6",
+    "bluebird": "^3.5.5",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "mongodb": "^3.2.7"
+    "express-mongoose-docs": "^0.3.2",
+    "express-session": "^1.16.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongodb": "^3.2.7",
+    "mongoose": "^5.5.14",
+    "morgan": "^1.9.1",
+    "nodemon": "^1.19.1"
+  },
+  "devDependencies": {
+    "express-reload": "^1.2.0"
   }
 }
