--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "new-try",
+  "name": "my-trello-backend",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon server.js",
+    "start": "NODE_ENV=development nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "LanzzLophophora",
   "license": "MIT",
   "dependencies": {
     "bcrypt": "^3.0.6",
@@ -22,8 +22,5 @@
     "mongoose": "^5.5.14",
     "morgan": "^1.9.1",
     "nodemon": "^1.19.1"
-  },
-  "devDependencies": {
-    "express-reload": "^1.2.0"
   }
 }
