--- a/package.json
+++ b/package.json
@@ -17,10 +17,18 @@
     "express-mongoose-docs": "^0.3.2",
     "express-session": "^1.16.1",
     "jsonwebtoken": "^8.5.1",
-    "lodash": "^4.17.11",
+    "lodash": "^4.17.15",
     "mongodb": "^3.2.7",
     "mongoose": "^5.5.14",
     "morgan": "^1.9.1",
     "nodemon": "^1.19.1"
+  },
+  "prettier": {
+    "printWidth": 100,
+    "singleQuote": true,
+    "semi": true
+  },
+  "devDependencies": {
+    "prettier": "^1.18.2"
   }
 }
